--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
+    "@coral-xyz/anchor": "^0.31.1",
     "@mastra/core": "^0.10.5",
-    "@mastra/libsql": "^0.10.2",
+    "@mastra/libsql": "^0.11.0",
     "@mastra/loggers": "^0.10.2",
-    "@mastra/memory": "^0.10.3",
+    "@solana/spl-token": "^0.4.13",
+    "@solana/web3.js": "^1.98.2",
     "dotenv": "^16.5.0",
     "ollama-ai-provider": "^1.2.0",
     "zod": "^3.25.67"
