--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
     "@coral-xyz/anchor": "^0.31.1",
-    "@mastra/core": "^0.10.5",
+    "@mastra/core": "^0.10.10",
     "@mastra/libsql": "^0.11.0",
-    "@mastra/loggers": "^0.10.2",
+    "@mastra/loggers": "^0.10.3",
+    "@mastra/memory": "^0.11.1",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
     "dotenv": "^16.5.0",
